fix:overflow

--- a/style.css
+++ b/style.css
@@ -21,12 +21,15 @@
 
 html,
 body {
-    font-family: Taviraj, sans-serif;
+    font-family: "Taviraj", "sans-serif";
 
 }
-/* body{
-    overflow-x:hidden ;
-} */
+
+html, body{
+    width: 100%;
+    position: relative;
+    overflow-x: hidden;
+}
 
 
 li{
@@ -51,7 +54,6 @@ li{
 
 
 .nav-list{
-    /* display:none; */
     position:absolute;
     background-color: white;
     width:100%;
@@ -67,10 +69,14 @@ li{
     padding-bottom: 12rem;
     transform: translateX(100%);
     list-style: none;
-    overflow :hidden;
+    overflow-x :hidden;
 
 }
 
+
+body{
+    overflow: hidden !important;
+}
 
 
 .section-heading{
